# segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: download_comma10k.py  train.py  visualize.py
segmentation/data/: comma10k.py  dataset.py
segmentation/engine/: evaluator.py  trainer.py
segmentation/models/: unet.py
segmentation/utils/: helpers.py  metrics.py
